syntax = "proto3";

option csharp_namespace = "ServerAdmin";

package user;

// The admin service definition.
service User {

  // Functions availables
   rpc EditUser(UserDTO) returns (MessageReply);
   rpc PostUser(UserDTO) returns (MessageReply);
   rpc DeleteUser(Id) returns (MessageReply);
 
}

message UserDTO{
	string Email = 1;
	string Name = 2;
  string Password = 3;
}

message Id {
	string Email = 1;
}


message MessageReply {
	string message = 1;
}
